--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
     "extends": [
-        "eslint:recommended",
-        "airbnb-base"
+        "eslint:recommended"
     ],
+    "parserOptions": { 
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+    }, 
     "rules": {
         "indent": [
             "error",
