--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "pc-nrf-dfu-js",
+  "name": "noble-nrf-dfu",
   "version": "0.2.12",
   "description": "JS implementation of the nRF DFU protocol",
   "esnext:main": "src/index.js",
-  "main": "dist/nrf-dfu.cjs.js",
-  "module": "dist/nrf-dfu.cjs.js",
+  "main": "dist/noble-nrf-dfu.cjs.js",
+  "module": "dist/noble-nrf-dfu.cjs.js",
+  "type": "module",
   "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
   "license": "Propietary",
   "scripts": {
+    "install": "npm run rollup",
     "rollup": "rollup -c rollup.config.js",
     "test": "rollup -c rollup.config.js && jest --detectOpenHandles --runInBand",
     "lint": "eslint src/"
   },
   "peerDependencies": {
-    "serialport": "^8.0.7"
+    "@abandonware/noble":"^1.9.2-25"
   },
   "devDependencies": {
-    "debug": "^4.1.1",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
-    "jest": "^24.8.0",
-    "jest-bamboo-formatter": "1.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "debug": "^4.3.7",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.1",
+    "jest": "^29.7.0",
+    "jest-bamboo-formatter": "^1.0.0",
     "jest-serializer-path": "^0.1.15",
-    "jszip": "^3.2.2",
-    "pc-nrfconnect-build": "git+https://github.com/NordicPlayground/pc-nrfconnect-build.git#semver:^0.0.1",
-    "rollup": "^1.16.6",
-    "rollup-plugin-commonjs": "^10.0.1",
+    "jszip": "^3.10.1",
+    "rollup": "^4.24.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "serialport": "^8.0.7"
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "jest": {
     "testMatch": [
