--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lint": "eslint src/"
   },
   "peerDependencies": {
-    "@abandonware/noble":"^1.9.2-25"
+    "@abandonware/noble": "^1.9.2-25"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "debug": "^4.3.7",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -28,12 +30,7 @@
     "jest-bamboo-formatter": "^1.0.0",
     "jest-serializer-path": "^0.1.15",
     "jszip": "^3.10.1",
-    "rollup": "^4.24.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup": "^4.24.0"
   },
   "jest": {
     "testMatch": [
