chnage to commonjs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/noble-nrf-dfu.cjs.js",
   "module": "dist/noble-nrf-dfu.cjs.js",
   "types": "noble-nrf-dfu.d.ts",
-  "type": "module",
+  "type": "commonjs",
   "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
   "license": "Propietary",
   "scripts": {
