--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "rollup -c rollup.config.js && jest --detectOpenHandles --runInBand",
     "lint": "eslint src/"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@abandonware/noble": "^1.9.2-25"
   },
   "devDependencies": {
