- buttonless dfu implemented - remove rollup - switch to esm - added example

--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
         "import"
     ],
     "env": {
+        "es2020":true,
         "es6": true,
         "browser": true,
         "node": true,
