--- a/package.json
+++ b/package.json
@@ -3,25 +3,19 @@
   "version": "0.2.12",
   "description": "JS implementation of the nRF DFU protocol",
   "esnext:main": "src/index.js",
-  "main": "dist/noble-nrf-dfu.cjs.js",
-  "module": "dist/noble-nrf-dfu.cjs.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "types": "noble-nrf-dfu.d.ts",
-  "type": "commonjs",
+  "type": "module",
   "author": "Iván Sánchez Ortega <ivan@sanchezortega.es>",
   "license": "Propietary",
   "scripts": {
-    "prepare": "npm run rollup",
-    "rollup": "rollup -c rollup.config.js",
-    "test": "rollup -c rollup.config.js && jest --detectOpenHandles --runInBand",
     "lint": "eslint src/"
   },
   "dependencies": {
     "@abandonware/noble": "^1.9.2-25"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.0",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
     "debug": "^4.3.7",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -30,8 +24,7 @@
     "jest": "^29.7.0",
     "jest-bamboo-formatter": "^1.0.0",
     "jest-serializer-path": "^0.1.15",
-    "jszip": "^3.10.1",
-    "rollup": "^4.24.0"
+    "jszip": "^3.10.1"
   },
   "jest": {
     "testMatch": [
