--- a/example/package.json
+++ b/example/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@abandonware/noble": "^1.9.2-25",
     "noble-nrf-dfu": "file:.."
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
