--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "dependencies": {
     "@abandonware/noble": "^1.9.2-25",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "debug": "^4.3.7"
   },
   "devDependencies": {
-    "debug": "^4.3.7",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
